[gd_scene load_steps=69 format=2]

[ext_resource path="res://UI Elements/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Backgrounds/Sky.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MMZX Model X/15.png" type="Texture" id=3]
[ext_resource path="res://Sprites/MMZX Model X/359.png" type="Texture" id=4]
[ext_resource path="res://Sprites/MMZX Model X/360.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Megaman X and Other Unused Sprites/4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Megaman X and Other Unused Sprites/1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/MMZX Model X/4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/MMZX Model X/5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/MMZX Model X/13.png" type="Texture" id=10]
[ext_resource path="res://Sprites/MMZX Model X/7.png" type="Texture" id=11]
[ext_resource path="res://Sprites/MMZX Model X/10.png" type="Texture" id=12]
[ext_resource path="res://Sprites/MMZX Model X/14.png" type="Texture" id=13]
[ext_resource path="res://Sprites/MMZX Model X/8.png" type="Texture" id=14]
[ext_resource path="res://Sprites/MMZX Model X/11.png" type="Texture" id=15]
[ext_resource path="res://Sprites/MMZX Model X/6.png" type="Texture" id=16]
[ext_resource path="res://Sprites/MMZX Model X/9.png" type="Texture" id=17]
[ext_resource path="res://Sprites/MMZX Model X/12.png" type="Texture" id=18]
[ext_resource path="res://Sprites/MMZX Model X/47.png" type="Texture" id=19]
[ext_resource path="res://Sprites/MMZX Model X/48.png" type="Texture" id=20]
[ext_resource path="res://Sprites/MMZX Model X/67.png" type="Texture" id=21]
[ext_resource path="res://Sprites/MMZX Model X/50.png" type="Texture" id=22]
[ext_resource path="res://Sprites/MMZX Model X/64.png" type="Texture" id=23]
[ext_resource path="res://Sprites/MMZX Model X/68.png" type="Texture" id=24]
[ext_resource path="res://Sprites/MMZX Model X/51.png" type="Texture" id=25]
[ext_resource path="res://Sprites/MMZX Model X/65.png" type="Texture" id=26]
[ext_resource path="res://Sprites/MMZX Model X/49.png" type="Texture" id=27]
[ext_resource path="res://Sprites/MMZX Model X/52.png" type="Texture" id=28]
[ext_resource path="res://Sprites/MMZX Model X/55.png" type="Texture" id=29]
[ext_resource path="res://Sprites/MMZX Model X/69.png" type="Texture" id=30]
[ext_resource path="res://Sprites/MMZX Model X/70.png" type="Texture" id=31]
[ext_resource path="res://Sprites/MMZX Model X/0.png" type="Texture" id=32]
[ext_resource path="res://Sprites/MMZX Model X/1.png" type="Texture" id=33]
[ext_resource path="res://Sprites/MMZX Model X/17.png" type="Texture" id=34]
[ext_resource path="res://Sprites/MMZX Model X/76.png" type="Texture" id=35]
[ext_resource path="res://Sprites/MMZX Model X/77.png" type="Texture" id=36]
[ext_resource path="res://Sprites/MMZX Model X/78.png" type="Texture" id=37]
[ext_resource path="res://Sprites/MMZX Model X/26.png" type="Texture" id=38]
[ext_resource path="res://Sprites/MMZX Model X/27.png" type="Texture" id=39]
[ext_resource path="res://Sprites/MMZX Model X/365.png" type="Texture" id=40]
[ext_resource path="res://Sprites/MMZX Model X/366.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Updated Charge shot effect/6.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Updated Charge shot effect/7.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Updated Charge shot effect/8.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Updated Charge shot effect/9.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Updated Charge shot effect/10.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Updated Charge shot effect/11.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Updated Charge shot effect/0.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Updated Charge shot effect/1.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Updated Charge shot effect/2.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Updated Charge shot effect/3.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Updated Charge shot effect/4.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Updated Charge shot effect/5.png" type="Texture" id=53]
[ext_resource path="res://Sounds/Megabuster/xbuster charge.wav" type="AudioStream" id=54]
[ext_resource path="res://Sounds/Megabuster/xbuster shot 1.wav" type="AudioStream" id=55]
[ext_resource path="res://Sounds/Megabuster/xbuster shot 2.wav" type="AudioStream" id=56]
[ext_resource path="res://Sounds/Megabuster/xbuster shot 3.wav" type="AudioStream" id=57]
[ext_resource path="res://Sounds/SFX/aileDamaged.wav" type="AudioStream" id=58]
[ext_resource path="res://Sounds/SFX/aileCharged1.wav" type="AudioStream" id=59]
[ext_resource path="res://Sounds/SFX/aileCharged2.wav" type="AudioStream" id=60]
[ext_resource path="res://Sounds/SFX/aileJump.wav" type="AudioStream" id=61]
[ext_resource path="res://Sounds/SFX/MM2_DeathSound.wav" type="AudioStream" id=62]
[ext_resource path="res://Sounds/SFX/aileScream.wav" type="AudioStream" id=63]
[ext_resource path="res://Sounds/SFX/HP Restore.wav" type="AudioStream" id=64]
[ext_resource path="res://UI Elements/HUD.tscn" type="PackedScene" id=65]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Damaged",
"speed": 4.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "BusterRun",
"speed": 12.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 30 ), ExtResource( 30 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 31 ) ],
"loop": true,
"name": "BusterDash",
"speed": 10.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "BusterAir",
"speed": 0.5
}, {
"frames": [ ExtResource( 38 ), ExtResource( 38 ), ExtResource( 38 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 39 ) ],
"loop": true,
"name": "Dash",
"speed": 10.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "BusterGround",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Level1",
"speed": 10.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ) ],
"loop": true,
"name": "Level3",
"speed": 10.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ) ],
"loop": true,
"name": "Level2",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 10.5
height = 17.75

[node name="Player" type="KinematicBody2D"]
editor/display_folded = true
z_index = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 640, 640 )

[node name="Background Image" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.392157, 0.415686, 0.47451, 0.588235 )
position = Vector2( -18, -128 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="ChargeshotSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Level1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="MegabusterPosition" type="Position2D" parent="."]
position = Vector2( 20, -7 )

[node name="BusterAudio" type="Node" parent="."]

[node name="chargeAudio" type="AudioStreamPlayer" parent="BusterAudio"]
stream = ExtResource( 54 )
volume_db = -6.0

[node name="regBusterShot" type="AudioStreamPlayer" parent="BusterAudio"]
stream = ExtResource( 55 )

[node name="weakChargeShot" type="AudioStreamPlayer" parent="BusterAudio"]
stream = ExtResource( 56 )

[node name="strongChargeShot" type="AudioStreamPlayer" parent="BusterAudio"]
stream = ExtResource( 57 )
volume_db = 4.0

[node name="AileSFX" type="Node" parent="."]
editor/display_folded = true

[node name="Damaged" type="AudioStreamPlayer" parent="AileSFX"]
stream = ExtResource( 58 )

[node name="chargeShotVoice1" type="AudioStreamPlayer" parent="AileSFX"]
stream = ExtResource( 59 )
volume_db = 24.0

[node name="chargeShotVoice2" type="AudioStreamPlayer" parent="AileSFX"]
stream = ExtResource( 60 )
volume_db = 12.0

[node name="Jump" type="AudioStreamPlayer" parent="AileSFX"]
stream = ExtResource( 61 )
volume_db = 24.0

[node name="DeathSFX" type="AudioStreamPlayer" parent="AileSFX"]
stream = ExtResource( 62 )
volume_db = 8.0

[node name="Scream" type="AudioStreamPlayer" parent="AileSFX"]
stream = ExtResource( 63 )
volume_db = 8.0

[node name="Heal" type="AudioStreamPlayer" parent="AileSFX"]
stream = ExtResource( 64 )
volume_db = -4.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="UI" parent="." instance=ExtResource( 65 )]
margin_left = -318.522
margin_top = -178.69
margin_right = -278.522
margin_bottom = -138.69
rect_scale = Vector2( 0.4, 0.4 )

[node name="ZaWarudoOverlay" type="ColorRect" parent="."]
modulate = Color( 0.196078, 0.196078, 0.196078, 0 )
margin_left = -319.0
margin_top = -179.0
margin_right = 320.0
margin_bottom = 181.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
